--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Бананглиш | Обозначение звуков английского языка</title>
-    <meta name="description" content="Страница с основными звуками английского языка и их обозначением в словах, плюс тренажёр для закрепления материала">
+    <meta name="description" content="Страница с основными звуками английского языка и их обозначением в словах с тренажёром для закрепления материала">
     <meta name="keywords" content="звуки  английский язык обозначение">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
