--- a/src/index.html
+++ b/src/index.html
@@ -433,7 +433,7 @@
           <section class="info-block" id="u-long">
             <h3>[u:]</h3>
             <p>
-              В словах обычно обозначается буквой <b>u</b> или сочетаниями <b>oo</b>, <b>ou</b>, <b>oe</b>, <b>ue</b>, <b>ew</b>. Этот звук входит в звукосочетание [<b>ju:</b>]. Также звук [<b>u:</b>] входит в название буквы алфавита — <b>U(u)</b>[<b>ju:</b>].
+              В словах обычно обозначается буквой <b>u</b> или сочетаниями <b>oo</b>, <b>ou</b>, <b>oe</b>, <b>ue</b>, <b>ew</b>. Этот звук входит в звукосочетание [<b>ju:</b>].
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -507,7 +507,7 @@
               </tr>
               <tr>
                 <td class="clear-tbl__term">e</td>
-                <td class="clear-tbl__desc"><b>e</b>qual, m<b>e</b>tre,, w<b>e</b></td>
+                <td class="clear-tbl__desc"><b>e</b>qual, m<b>e</b>tre, w<b>e</b></td>
               </tr>
             </table>
           </section>
