--- a/src/index.html
+++ b/src/index.html
@@ -233,7 +233,7 @@
           <section class="info-block" id="æ">
             <h3>[æ]</h3>
             <p>
-              В словах обычно обозначается буквой <b>a</b>:
+              Обычно обозначается буквой <b>a</b>:
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -245,7 +245,7 @@
           <section class="info-block" id="υ">
             <h3>[υ]</h3>
             <p>
-              В словах часто обозначается буквой <b>u</b> или сочетаниями <b>oo</b>, <b>ou</b>. Также иногда этот звук в словах может обозначается буквой <b>o</b>:
+              Часто обозначается буквой <b>u</b> или сочетаниями <b>oo</b>, <b>ou</b>. Также иногда этот звук может обозначается буквой <b>o</b>:
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -269,7 +269,7 @@
           <section class="info-block" id="ɒ">
             <h3>[ɒ]</h3>
             <p>
-              В словах обычно обозначается буквой <b>o</b>, а иногда <b>a</b>.
+              Обычно обозначается буквой <b>o</b>, а иногда <b>a</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -285,7 +285,7 @@
           <section class="info-block" id="ɪ">
             <h3>[ɪ]</h3>
             <p>
-              В словах обычно обозначается буквой <b>i</b>. Также этот звук в словах могут обозначать буквы <b>u</b>, <b>y</b> и сочетание <b>ui</b>.
+              Обычно обозначается буквой <b>i</b>. Также этот звук могут обозначать буквы <b>u</b>, <b>y</b> и сочетание <b>ui</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -325,7 +325,7 @@
           <section class="info-block" id="e">
             <h3>[e]</h3>
             <p>
-              В словах обычно обозначается буквой <b>e</b>, реже <b>ea</b>, <b>ie</b>, <b>a</b>, <b>ai</b>.
+              Обычно обозначается буквой <b>e</b>, реже <b>ea</b>, <b>ie</b>, <b>a</b>, <b>ai</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -353,7 +353,7 @@
           <section class="info-block" id="ʌ">
             <h3>[ʌ]</h3>
             <p>
-              В словах обычно обозначается буквой <b>u</b>, иногда <b>o</b>, или сочетанием <b>ou</b>.
+              Обычно обозначается буквой <b>u</b>, иногда <b>o</b>, или сочетанием <b>ou</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -411,7 +411,7 @@
           <section class="info-block" id="ɑ-long">
             <h3>[ɑ:]</h3>
             <p>
-              В словах обычно обозначается буквой <b>a</b> или сочетанием <b>ar</b>.
+              Обычно обозначается буквой <b>a</b> или сочетанием <b>ar</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -433,7 +433,7 @@
           <section class="info-block" id="u-long">
             <h3>[u:]</h3>
             <p>
-              В словах обычно обозначается буквой <b>u</b> или сочетаниями <b>oo</b>, <b>ou</b>, <b>oe</b>, <b>ue</b>, <b>ew</b>.
+              Обычно обозначается буквой <b>u</b> или сочетаниями <b>oo</b>, <b>ou</b>, <b>oe</b>, <b>ue</b>, <b>ew</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -461,7 +461,7 @@
           <section class="info-block" id="ɔ-long">
             <h3>[ɔ:]</h3>
             <p>
-              Этот звук в словах имеет различное обозначение.
+              Звук имеет различное обозначение.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -474,7 +474,7 @@
           <section class="info-block" id="i-long">
             <h3>[i:]</h3>
             <p>
-              Обычно обозначается сочетаниями <b>ee</b> или <b>ea</b>. Также этот звук в словах могут обозначать сочетания <b>ie</b>, <b>ey</b>, <b>eo</b> или буквы <b>i</b>, <b>e</b>.
+              Обычно обозначается сочетаниями <b>ee</b> или <b>ea</b>. Также этот звук могут обозначать сочетания <b>ie</b>, <b>ey</b>, <b>eo</b> или буквы <b>i</b>, <b>e</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -598,7 +598,7 @@
           <section class="info-block" id="aɪ">
             <h3>[aɪ]</h3>
             <p>
-              В словах может обозначаться буквами <b>i</b>, <b>y</b> или сочетаниями <b>ie</b>, <b>igh</b>, <b>uy</b>. Также этот звук обозначается буквой алфавита — <b>I(i)</b>
+              Может обозначаться буквами <b>i</b>, <b>y</b> или сочетаниями <b>ie</b>, <b>igh</b>, <b>uy</b>. Также этот звук обозначается буквой алфавита — <b>I(i)</b>
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -626,7 +626,7 @@
           <section class="info-block" id="eɪ">
             <h3>[eɪ]</h3>
             <p>
-              В словах может обозначаться буквой <b>a</b> или сочетаниями <b>ai</b>, <b>ay</b>, <b>ey</b>, <b>ea</b>, <b>eigh</b>.
+              Может обозначаться буквой <b>a</b> или сочетаниями <b>ai</b>, <b>ay</b>, <b>ey</b>, <b>ea</b>, <b>eigh</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -658,7 +658,7 @@
           <section class="info-block" id="əυ">
             <h3>[əυ]</h3>
             <p>
-              В словах может обозначаться буквой <b>o</b> или сочетаниями <b>ow</b>, <b>oa</b>, <b>oe</b>.
+              Может обозначаться буквой <b>o</b> или сочетаниями <b>ow</b>, <b>oa</b>, <b>oe</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -701,7 +701,7 @@
           <section class="info-block" id="p">
             <h3>[p]</h3>
             <p>
-              В словах обычно обозначается буквой <b>p</b> или сочетанием <b>pp</b>.
+              Обычно обозначается буквой <b>p</b> или сочетанием <b>pp</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -717,7 +717,7 @@
           <section class="info-block" id="b">
             <h3>[b]</h3>
             <p>
-              В словах обычно обозначается буквой <b>b</b> или сочетанием <b>bb</b>.
+              Обычно обозначается буквой <b>b</b> или сочетанием <b>bb</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -733,7 +733,7 @@
           <section class="info-block" id="f">
             <h3>[f]</h3>
             <p>
-              В словах обычно обозначается буквой <b>f</b> или сочетанием <b>ff</b>, иногда сочетаниями <b>ph</b>, <b>gh</b>.
+              Обычно обозначается буквой <b>f</b> или сочетанием <b>ff</b>, иногда сочетаниями <b>ph</b>, <b>gh</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -756,7 +756,7 @@
           </section>
           <section class="info-block" id="v">
             <h3>[v]</h3>
-            <p>В словах обозначается буквой <b>v</b>.</p>
+            <p>Обозначается буквой <b>v</b>.</p>
             <table class="clear-tbl" lang="en">
               <tr>
                 <td class="clear-tbl__term">v</td>
@@ -767,7 +767,7 @@
           <section class="info-block" id="t">
             <h3>[t]</h3>
             <p>
-              В словах обычно обозначается буквой <b>t</b> или сочетанием <b>tt</b>.
+              Обычно обозначается буквой <b>t</b> или сочетанием <b>tt</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -783,7 +783,7 @@
           <section class="info-block" id="d">
             <h3>[d]</h3>
             <p>
-              Звук [<b>d</b>] в словах обычно обозначается буквой <b>d</b> или сочетанием <b>dd</b>.
+              Обычно обозначается буквой <b>d</b> или сочетанием <b>dd</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -799,7 +799,7 @@
           <section class="info-block" id="k">
             <h3>[k]</h3>
             <p>
-              В словах обычно обозначается буквами <b>с</b>, <b>k</b>, сочетанием <b>ck</b>, а иногда <b>ch</b>.
+              Обычно обозначается буквами <b>с</b>, <b>k</b>, сочетанием <b>ck</b>, а иногда <b>ch</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -823,7 +823,7 @@
           <section class="info-block" id="g">
             <h3>[g]</h3>
             <p>
-              В словах обычно обозначается буквой <b>g</b> или сочетанием <b>gg</b>.
+              Обычно обозначается буквой <b>g</b> или сочетанием <b>gg</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -867,7 +867,7 @@
           <section class="info-block" id="tʃ">
             <h3>[tʃ]</h3>
             <p>
-              В словах обычно обозначается буквой <b>t</b> или сочетаниями <b>ch</b>, <b>tch</b>.
+              Обычно обозначается буквой <b>t</b> или сочетаниями <b>ch</b>, <b>tch</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -893,7 +893,7 @@
           <section class="info-block" id="dʒ">
             <h3>[dʒ]</h3>
             <p>
-              В словах обычно обозначается буквами <b>j</b>, <b>g</b> или сочетаниями <b>ge</b>, <b>dge</b>.
+              Обычно обозначается буквами <b>j</b>, <b>g</b> или сочетаниями <b>ge</b>, <b>dge</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -917,7 +917,7 @@
           <section class="info-block" id="s">
             <h3>[s]</h3>
             <p>
-              В словах обычно обозначается буквами <b>s</b>, <b>с</b> или сочетанием <b>ss</b>, а иногда и <b>sc</b>. Входит в звукосочетание [<b>ks</b>] обозначаемое в словах буквой <b>x</b>.
+              Обычно обозначается буквами <b>s</b>, <b>с</b> или сочетанием <b>ss</b>, а иногда и <b>sc</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -936,16 +936,12 @@
                 <td class="clear-tbl__term">sc</td>
                 <td class="clear-tbl__desc"><b>sc</b>ien<b>c</b>e, <b>sc</b>issors</td>
               </tr>
-              <tr>
-                <td class="clear-tbl__term">x</td>
-                <td class="clear-tbl__desc">si<b>x</b>[sɪ<b>ks</b>], ne<b>x</b>t[ne<b>ks</b>t]</td>
-              </tr>
             </table>
           </section>
           <section class="info-block" id="z">
             <h3>[z]</h3>
             <p>
-              В словах обычно обозначается буквами <b>s</b>, <b>z</b> или сочетаниями <b>ss</b>, <b>zz</b>.
+              Обычно обозначается буквами <b>s</b>, <b>z</b> или сочетаниями <b>ss</b>, <b>zz</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -987,7 +983,7 @@
           <section class="info-block" id="ʒ">
             <h3>[ʒ]</h3>
             <p>
-              В словах обычно обозначается буквой <b>s</b> или сочетанием <b>si</b>.
+              Обычно обозначается буквой <b>s</b> или сочетанием <b>si</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -1003,7 +999,7 @@
           <section class="info-block" id="m">
             <h3>[m]</h3>
             <p>
-              В словах обычно обозначается буквой <b>m</b> или сочетаниями <b>mm</b>, <b>mb</b>, <b>mn</b>.
+              Обычно обозначается буквой <b>m</b> или сочетаниями <b>mm</b>, <b>mb</b>, <b>mn</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -1027,7 +1023,7 @@
           <section class="info-block" id="n">
             <h3>[n]</h3>
             <p>
-              В словах обычно обозначается буквой <b>n</b>, но иногда и сочетаниями <b>nn</b>, <b>kn</b>.
+              Обычно обозначается буквой <b>n</b>, но иногда и сочетаниями <b>nn</b>, <b>kn</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -1067,7 +1063,7 @@
           <section class="info-block" id="h">
             <h3>[h]</h3>
             <p>
-              В словах обычно обозначается буквой <b>h</b>, а в некоторых словах сочетанием <b>wh</b>.
+              Обычно обозначается буквой <b>h</b>, а в некоторых словах сочетанием <b>wh</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -1083,7 +1079,7 @@
           <section class="info-block" id="l">
             <h3>[l]</h3>
             <p>
-              В словах обычно обозначается буквой <b>l</b> или сочетанием <b>ll</b>.
+              Обычно обозначается буквой <b>l</b> или сочетанием <b>ll</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -1099,7 +1095,7 @@
           <section class="info-block" id="r">
             <h3>[r]</h3>
             <p>
-              В словах обычно обозначается буквой <b>r</b>, сочетаниями <b>rr</b>, <b>wr</b>.
+              Обычно обозначается буквой <b>r</b>, сочетаниями <b>rr</b>, <b>wr</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -1119,7 +1115,7 @@
           <section class="info-block" id="w">
             <h3>[w]</h3>
             <p>
-              В словах обычно обозначается буквой <b>w</b> или сочетанием <b>wh</b>.
+              Обычно обозначается буквой <b>w</b> или сочетанием <b>wh</b>.
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
@@ -1151,6 +1147,8 @@
             </table>
           </section>
         </section>
+
+        <!-- Под вопросом -->
         <section class="page__item" hidden>
           <h2 class="page__subtitle" id="sound-combinations">Звукосочетания</h2>
           <section class="info-block" id="ju-long">
@@ -1168,6 +1166,14 @@
                 <td class="clear-tbl__desc">b<b>eau</b>tiful, v<b>iew</b>, interv<b>iew</b>, q<b>ueue</b></td>
               </tr>
           </table>
+          </section>
+          <section>
+            <h3>[ks]</h3>
+            Звукосочетание [<b>ks</b>] обозначаемое в словах буквой <b>x</b>
+            <tr>
+              <td class="clear-tbl__term">x</td>
+              <td class="clear-tbl__desc">si<b>x</b>[sɪ<b>ks</b>], ne<b>x</b>t[ne<b>ks</b>t]</td>
+            </tr>
           </section>
         </section>
       </div>
