--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
           <section class="info-block" id="aɪ">
             <h3>[aɪ]</h3>
             <p>
-              Может обозначаться буквами <b>i</b>, <b>y</b> или сочетаниями <b>ie</b>, <b>igh</b>, <b>uy</b>. Также этот звук обозначается буквой алфавита — <b>I(i)</b>
+              Может обозначаться буквами <b>i</b>, <b>y</b> или сочетаниями <b>ie</b>, <b>igh</b>, <b>uy</b>.</b>
             </p>
             <table class="clear-tbl" lang="en">
               <tr>
