--- a/src/index.html
+++ b/src/index.html
@@ -369,7 +369,7 @@
                 <td class="clear-tbl__desc">c<b>ou</b>ntry</td>
               </tr>
               <tr>
-                <td class="clear-tbl__term">другие слова с этим звуком:</td>
+                <td class="clear-tbl__term">другие обозначения:</td>
                 <td class="clear-tbl__desc">
                   one[wʌn]
                 </td>
@@ -423,7 +423,7 @@
                 <td class="clear-tbl__desc">b<b>ar</b>, c<b>ar</b>d</td>
               </tr>
               <tr>
-                <td class="clear-tbl__term">другие слова с этим звуком:</td>
+                <td class="clear-tbl__term">другие обозначения:</td>
                 <td class="clear-tbl__desc">
                   l<b>au</b>gh, h<b>ear</b>t, h<b>a</b>lf
                 </td>
@@ -453,7 +453,7 @@
                 <td class="clear-tbl__desc">bl<b>ue</b>, cl<b>ue</b></td>
               </tr>
               <tr>
-                <td class="clear-tbl__term">другие слова с этим звуком:</td>
+                <td class="clear-tbl__term">другие обозначения:</td>
                 <td class="clear-tbl__desc">t<b>wo</b>, fr<b>ui</b>t, j<b>ui</b>ce</td>
               </tr>
             </table>
@@ -883,7 +883,7 @@
                 <td class="clear-tbl__desc">ki<b>tch</b>en, wa<b>tch</b>, ca<b>tch</b></td>
               </tr>
               <tr>
-                <td class="clear-tbl__term">другие слова с&nbsp;этим звуком:</td>
+                <td class="clear-tbl__term">другие обозначения:</td>
                 <td class="clear-tbl__desc">
                   <b>cz</b>ech[<b>tʃ</b>ek]
                 </td>
@@ -973,7 +973,7 @@
                 <td class="clear-tbl__desc"><b>sh</b>op, ca<b>sh</b>, fre<b>sh</b></td>
               </tr>
               <tr>
-                <td class="clear-tbl__term">другие слова с&nbsp;этим звуком:</td>
+                <td class="clear-tbl__term">другие обозначения:</td>
                 <td class="clear-tbl__desc">
                   <b>s</b>ugar, o<b>c</b>ean, ma<b>ch</b>ine, deli<b>c</b>ious, interna<b>ti</b>onal, Ru<b>ss</b>ia.
                 </td>
@@ -1127,7 +1127,7 @@
                 <td class="clear-tbl__desc"><b>wh</b>ite, <b>wh</b>at, <b>wh</b>ich</td>
               </tr>
               <tr>
-                <td class="clear-tbl__term">другие слова с этим звуком:</td>
+                <td class="clear-tbl__term">другие обозначения:</td>
                 <td class="clear-tbl__desc">
                   <b>o</b>ne, lang<b>u</b>age, q<b>u</b>estion, q<b>u</b>iet, sq<b>u</b>are
                 </td>
@@ -1162,7 +1162,7 @@
                 <td class="clear-tbl__desc"><b>u</b>niversity, <b>u</b>sual, st<b>u</b>dent, n<b>ew</b></td>
               </tr>
               <tr>
-                <td class="clear-tbl__term">другие слова с этим звуком:</td>
+                <td class="clear-tbl__term">другие обозначения:</td>
                 <td class="clear-tbl__desc">b<b>eau</b>tiful, v<b>iew</b>, interv<b>iew</b>, q<b>ueue</b></td>
               </tr>
           </table>
