--- a/src/index.html
+++ b/src/index.html
@@ -48,12 +48,6 @@
         <img src="img/preloader.gif" width="64px" height="auto" alt="">
       </picture>
     </a>
-    <button class="btn btn_menu btn_descktop-hidden btn_hidden" type="button">
-      <span class="noscreen">Закрыть меню/открыть меню</span>
-    </button>
-    <button class="btn overlay overlay_hidden overlay_descktop-hidden">
-      <span class="noscreen">Закрыть меню</span>
-    </button>
     <div class="page__container">
       <div class="page__col1">
         <nav class="page__nav sounds dropup dropup_mibile-hidden">
@@ -221,6 +215,12 @@
           </section>
           <a class="sounds__btn btn btn_primary" href="../bananglish-trainer/">открыть тренажёр</a>
         </nav>
+        <button class="btn btn_menu btn_descktop-hidden btn_hidden" type="button">
+          <span class="noscreen">Закрыть меню/открыть меню</span>
+        </button>
+        <button class="btn overlay overlay_hidden overlay_descktop-hidden" type="button">
+          <span class="noscreen">Закрыть меню</span>
+        </button>
       </div>
       <div class="page__col2">
         <h1 class="page__title">Обозначение звуков<br>английского языка</h1>
