--- a/src/index.html
+++ b/src/index.html
@@ -18,20 +18,20 @@
     <link rel="preload" href="font/tahoma-bold.woff2" as="font" type="font/woff2" crossorigin>
 
     <link rel="stylesheet" href="css/style.min.css">
-      <!-- Yandex.Metrika counter -->
-      <script type="text/javascript" >
-        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-        m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-        (window document "script" "https://mc.yandex.ru/metrika/tag.js" "ym");
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" >
+      (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+      m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+      (window document "script" "https://mc.yandex.ru/metrika/tag.js" "ym");
 
-        ym(67343683 "init" {
-            clickmap:true,
-            trackLinks:true,
-            accurateTrackBounce:true,
-            webvisor:true
-        });
-      </script>
-      <noscript><div><img src="https://mc.yandex.ru/watch/67343683" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+      ym(67343683 "init" {
+          clickmap:true,
+          trackLinks:true,
+          accurateTrackBounce:true,
+          webvisor:true
+      });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/67343683" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
       <!-- /Yandex.Metrika counter -->
   </head>
   <body class="page">
@@ -1086,10 +1086,6 @@
         </section>
       </div>
     </div>
-    <script src="js/preloader.js"></script>
-    <script src="js/dropup.js"></script>
-    <script src="js/smooth-scroll.min.js"></script>
-    <script scr="js/smooth-scroll-custom.js"></script>
-    <script src="js/scroll-to-anchor.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
