дорабатывает мобильное меню

--- a/src/index.html
+++ b/src/index.html
@@ -200,7 +200,7 @@
               </li>
             </ul>
           </section>
-          <section class="sounds__container">
+          <section class="sounds__container sounds__container_mobile_hidden">
             <h3 class="sounds__title">
               <a class="sounds__link" href="#addition">Дополнительно</a>
             </h3>
