дорабатывает мобильное меню

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
     </a>
     <div class="page__container">
       <div class="page__col1">
-        <nav class="page__nav sounds">
+        <aside class="page__nav sounds">
           <section class="sounds__container">
               <h3 class="sounds__title">
                 <a class="sounds__link" href="#vowel-sounds">Гласные звуки</a>
@@ -214,7 +214,7 @@
             </ul>
           </section>
           <a class="sounds__btn btn btn_primary" href="../bananglish-trainer/">открыть тренажёр</a>
-        </nav>
+        </aside>
       </div>
       <div class="page__col2">
         <h1 class="page__title">Обозначение звуков<br>английского языка</h1>
