--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <img src="img/preloader.gif" width="64px" height="auto" alt="">
       </picture>
     </a>
+    <a class="page__link btn btn_primary" href="../bananglish-trainer/">открыть тренажёр</a>
     <div class="page__container">
       <div class="page__col1">
         <aside class="page__nav sounds">
@@ -213,7 +214,6 @@
               </li>
             </ul>
           </section>
-          <a class="sounds__btn btn btn_primary" href="../bananglish-trainer/">открыть тренажёр</a>
         </aside>
       </div>
       <div class="page__col2">
